@@ -1,4 +1,8 @@
-﻿drkns 20.02.2016 21:53:30 +0200 - build 4558
+﻿drkns 20.02.2016 22:01:11 +0200 - build 4559
+
+1. gcc build fix.
+
+drkns 20.02.2016 21:53:30 +0200 - build 4558
 
 1. Продолжение 4548: обрабатываем все исключения единообразно.
 
